-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 10.5.4
-
Labels:None
after
commit e9dbbf11204
|
Author: Igor Babaev <igor@mariadb.com>
|
Date: Sat Jun 6 11:38:38 2020 -0700
|
 |
MDEV-22748 MariaDB crash on WITH RECURSIVE large query
|
was merged into 10.5, galera.wsrep_strict_ddl started to fail, it times out because the test hangs on the line
CREATE VIEW x1 AS SELECT * FROM before_t1; |
The first server gets stuck in this loop:
bool st_select_lex::cleanup() |
{
|
...
|
for (TABLE_LIST *tbl= get_table_list(); tbl; tbl= tbl->next_local) |
{
|
and tbl == tbl->next_local, so it loops there forever.
Nothing fails in 10.4, so presumably the fix was incorrectly merged into 10.5
- relates to
-
MDEV-20051 Add new mode to wsrep_OSU_method in which Galera checks storage engine of the effected table
-
- Closed
-
-
MDEV-22835 galera.wsrep_strict_ddl MTR failed: crashed while running 'analyze-timeout'
-
- Closed
-